# HPML_Project

./: .env.example  .gitignore  .gitmodules  README.md  build_index_bm25.sh  build_training_data.sh  build_training_data_from_retrieved.py  get_training_data.py  main.py  pyproject.toml  retrieve.sh  retrieve_result.py  run_hpc.sh  setup.py
assets/: sample_data.json
docs/: WANDB_INTEGRATION.md
longrefiner/: __init__.py  prompt_template.py  refiner.py  refiner_hf.py  task_instruction.py
results/: eval_result_base_hotpotqa.json
scripts/: quick_start.py
scripts/evaluation/: analyze_improvement.py  compare_all_results.py  diagnose_no_answer.py  find_correct_incorrect.py  quick_diagnosis.py  run_eval.py  run_eval.sh  run_eval_flashrag.py  simple_smoke_test.py  smoke_test.py
scripts/training/: build_training_data.py  inference_benchmark_wandb.py  train_config_step1.yaml  train_config_step1_full.yaml  train_config_step1_qlora.yaml  train_config_step2.yaml  train_config_step2_full.yaml  train_config_step2_qlora.yaml  train_config_step3.yaml  train_config_step3_full.yaml  train_config_step3_qlora.yaml  train_with_wandb_example.py
scripts/training/training_data/: step1_query-analysis.json  step2_doc-structuring.json  step3_global-selection.json  step_1.json
training_data_construction/: retrieve_result.py  transform_data.py
