[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longrefiner"
version = "0.1.0"
description = "Hierarchical Document Refinement for Long-context Retrieval-augmented Generation, with added support for Apple Silicon."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Jinjiajie", email = "jasonjin2@foxmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers",
    "rank_bm25",
    "tqdm",
    "numpy",
    "json_repair",
    "torch",
    "tiktoken",
    "flashrag-dev",
    "peft",
    "accelerate",
    "python-dotenv",
    "sentencepiece",
    "vllm; sys_platform == 'linux'",
]

[project.optional-dependencies]
vllm = ["vllm"]
quantization = ["bitsandbytes; sys_platform == 'linux'"]

[project.urls]
Homepage = "https://github.com/iridiumtao/LongRefiner"
Repository = "https://github.com/iridiumtao/LongRefiner"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
