[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longrefiner"
version = "0.1.0"
description = "Hierarchical Document Refinement for Long-context Retrieval-augmented Generation, optimized for HPC execution."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Jinjiajie", email = "jasonjin2@foxmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "vllm",
    "transformers",
    "rank_bm25",
    "tqdm",
    "numpy",
    "json_repair",
    "torch",
    "torchvision",
    "torchaudio",
    "tiktoken",
    "datasets",  # HuggingFace datasets
    "sentencepiece",
    "wandb",
    "flashrag-dev",  # Official evaluation framework (pre-release)
]

[project.urls]
Homepage = "https://github.com/iridiumtao/LongRefiner"
Repository = "https://github.com/iridiumtao/LongRefiner"
"Bug Tracker" = "https://github.com/iridiumtao/LongRefiner/issues"
Documentation = "https://github.com/iridiumtao/LongRefiner#readme"

[tool.uv]
# Allow pre-release versions for flashrag-dev
prerelease = "allow"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" },
]
torchvision = [
  { index = "pytorch-cu118" },
]
torchaudio = [
  { index = "pytorch-cu118" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
